[gd_scene load_steps=9 format=3 uid="uid://dq63txm4huwfx"]

[ext_resource type="Script" path="res://systems/inventory/slot/standard_slot_ui.gd" id="1_5ppxn"]
[ext_resource type="Theme" uid="uid://bepg6821mbuqr" path="res://themes/dame_theme.tres" id="1_e8l50"]
[ext_resource type="Script" path="res://systems/inventory/slot/slot_ui_interface.gd" id="2_7gn05"]
[ext_resource type="StyleBox" uid="uid://cuujlxl2obw24" path="res://themes/style_boxes/normal.tres" id="2_wkqbm"]
[ext_resource type="Script" path="res://systems/inventory/slot/slot_ui_drag_drop.gd" id="3_5ji24"]
[ext_resource type="Texture2D" uid="uid://cvjf23d67ave7" path="res://assets/textures/icon.svg" id="3_w0y2s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k1okm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cb5md"]

[node name="StandardSlotUI" type="PanelContainer"]
custom_minimum_size = Vector2(64, 64)
offset_right = 64.0
offset_bottom = 64.0
theme = ExtResource("1_e8l50")
theme_override_styles/panel = ExtResource("2_wkqbm")
script = ExtResource("1_5ppxn")

[node name="SlotUIInterface" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2
script = ExtResource("2_7gn05")

[node name="MarginContainer" type="MarginContainer" parent="SlotUIInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="SlotUIInterface/MarginContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_w0y2s")
expand_mode = 1
stretch_mode = 4

[node name="AmountLabel" type="Label" parent="SlotUIInterface"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "1"
horizontal_alignment = 2

[node name="SlotUIDragDrop" type="Control" parent="."]
layout_mode = 2
mouse_filter = 1
script = ExtResource("3_5ji24")

[node name="Button" type="Button" parent="."]
layout_mode = 2
mouse_filter = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_k1okm")
theme_override_styles/normal = SubResource("StyleBoxEmpty_cb5md")
button_mask = 2
